# sensei

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.template  Makefile  README.md  addons.make  build.sh  config.make  creepyfaces.txt  install_models.sh  install_opencv.sh  run.sh  unification_psuedocode.txt
ClassDemo.xcodeproj/: project.pbxproj
ClassDemo.xcodeproj/project.xcworkspace/xcshareddata/: ClassDemo.xcscmblueprint
ClassDemo.xcodeproj/project.xcworkspace/xcuserdata/avi.xcuserdatad/: UserInterfaceState.xcuserstate
ClassDemo.xcodeproj/xcshareddata/xcschemes/: ClassDemo Debug.xcscheme  ClassDemo Release.xcscheme
cmake/modules/: FindLibUSB.cmake  FindOpenCL.cmake  FindOpenFace.cmake  FindTBB.cmake  LibFindMacros.cmake
sensei-nuc-resin-docker/: Dockerfile  README.md  sensei_keypad_daemon.py
src/: ClassComponent.cpp  ClassComponent.h  ClassRecorder.cpp  ClassRecorder.h  ClassVisualizer.cpp  ClassVisualizer.h  FaceDetector.cpp  FaceDetector.h  FaceDetector.hpp  KinectHelper.cpp  KinectHelper.h  MtcnnDetector.cpp  MtcnnDetector.h  OpenFace.cpp  OpenFace.h  OpenFaceModel.cpp  OpenFaceModel.h  OpenFaceModelPool.cpp  OpenFaceModelPool.h  Person.cpp  Person.h  SenseiApp.cpp  SenseiApp.h  drawUtils.cpp  drawUtils.h  main.cpp  mtcnn.cpp  mtcnn.h  mtcnn_runner.py  ofApp.cpp  ofApp.h  ofxVideoRecorder.cpp
